- weitere Verbesserungen bis monotone Folgen
git-svn-id: https://svn.lug-jena.de/uni-skripte@132 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -843,20 +843,18 @@ Setze $\varepsilon := \frac{1}{2} d(a,b) >0$
 
 \subsection{Sätze über reelle Zahlenfolgen}
 
-Im folgenden sei $X = \R \quad d(x,y) = |x-y|$  für $x,y \in
-\R$\\
-Folgerungen aus dem vorherigen Abschnitt:
+Im folgenden sei $X = \R$ und $d(x,y) = |x-y|$  für $x,y \in
+\R$. Aus dem vorigen Abschnitt folgt:
 \begin{enumerate}
-  \item $a \in \R$ ist Grenzwert von $(a_n) \subset \R
-    \Leftrightarrow \forall \varepsilon > 0 \ \exists n_{\varepsilon}
-    \in \N \ \forall n \geq n_{\varepsilon}: |a_n-a|
-    \leq \varepsilon$ 
-  \item Eine konvergente Folge $(a_n) \subset \R$ ist beschränkt,
-    d.h. $\exists M \geq 0 \ \forall n \in \N : |a_n|\leq M$\\
-    Denn sei $a = \lim a_n$. Dann existiert $M_1 \geq 0 \ \forall n \in
-    \N:|a-a_n|\leq M_1$\\
-    $|a_n|=|(a_n-a)+a|\leq |a_n-a|+|a|\leq M_1+|a|$\\
-    Für $M := M_1+|a|$ gilt $|a_n|\leq M \quad \forall n$.
+\item $a \in \R$ ist Grenzwert von $(a_n) \subset \R \Leftrightarrow
+  \forall \varepsilon > 0 \, \exists n_{\varepsilon} \in \N \, \forall
+  n \geq n_{\varepsilon}: |a_n-a| \leq \varepsilon$
+\item Eine konvergente Folge $(a_n) \subset \R$ ist beschränkt,
+  d.h. $\exists M \geq 0 \ \forall n \in \N : |a_n|\leq M$\\
+  Denn sei $a = \lim a_n$. Dann existiert $M_1 \geq 0 \ \forall n \in
+  \N:|a-a_n|\leq M_1$\\
+  $|a_n|=|(a_n-a)+a|\leq |a_n-a|+|a|\leq M_1+|a|$\\
+  Für $M := M_1+|a|$ gilt $|a_n|\leq M \quad \forall n$.
 \end{enumerate}
 
 \paragraph{Geometrische Interpretation von Grenzwert}
@@ -864,181 +862,189 @@ Folgerungen aus dem vorherigen Abschnitt:
 
 \begin{remark}
   \begin{enumerate}
-    \item Eine Folge $(a_n) \subset \R$ heißt \emph{Nullfolge}
-      $\Leftrightarrow \lim a_n =0 \ (\Leftrightarrow \lim |a_n|=0)$
-    \item $\lim a_n =a \Leftrightarrow \lim (a_n-a)=0$, d.h. $a_n -a$ 
-      ist Nullfolge.
+  \item Eine Folge $(a_n) \subset \R$ heißt
+    \emph{Nullfolge\index{Nullfolge}} $\Leftrightarrow \lim a_n =0 \
+    (\Leftrightarrow \lim |a_n|=0)$
+  \item $\lim a_n =a \Leftrightarrow \lim (a_n-a)=0$, d.h. $a_n -a$
+    ist Nullfolge.
   \end{enumerate}
 \end{remark}
 
-Beispiel: $a_n=\frac{1}{n}$ ist Nullfolge.\\
-Beweis: Sei $\varepsilon > 0$. Wähle $n_{\varepsilon} \in \R$,
-so dass $\frac{1}{n_{\varepsilon}} \leq \varepsilon$. Dann $n \geq 
-n_{\varepsilon} \Rightarrow |\frac{1}{n}-0|=\frac{1}{n}\leq 
-\frac{1}{n_{\varepsilon}} \leq \varepsilon$
+\begin{beispiel}
+  Die Folge $a_n=\nicefrac{1}{n}$ ist eine Nullfolge. Denn sei
+  $\varepsilon > 0$ und wähle $n_{\varepsilon} \in \R$, so dass
+  $\nicefrac{1}{n_{\varepsilon}} \leq \varepsilon$. Dann $n \geq
+  n_{\varepsilon} \Rightarrow |\nicefrac{1}{n}-0|=\nicefrac{1}{n}\leq
+  \nicefrac{1}{n_{\varepsilon}} \leq \varepsilon$
+\end{beispiel}
 
 \paragraph{Rechenregeln für konvergente Folgen}
 \begin{theorem}
   \label{satz:rechenregel}
-  Seien $(a_n),(b_n) \subset \R$ konvergent. $a:=\lim a_n \quad
-  b:=\lim b_n$. Dann:
+  Seien $(a_n),(b_n) \subset \R$ konvergent, $a:=\lim a_n$ und
+  $b:=\lim b_n$. Dann:
   \begin{enumerate}
-    \item \[\lim (a_n +b_n)=\lim a_n+\lim b_n=a+b\]
-    \item \[\lim (a_nb_n)=\lim a_n \lim b_n =ab\]
-    \item \[\lim \left(\frac{a_n}{b_n}\right)=\frac{\lim a_n}{\lim b_n}=\frac{a}{b}
-      \qquad \text{falls } b \neq 0 \quad b_n \neq 0\]
-    \item \[\lim |a_n|=|\lim a_n| =|a|\]
-    \item Vergleichssatz \[\exists m \in \N \ \forall n \geq m 
-      \ a_n \leq b_n \Rightarrow \lim a_n \leq \lim b_n \Rightarrow a
-      \leq b\]
-    \item \[\begin{split}\exists m \in \N \quad \forall n \geq m \quad
-      a_n \leq c_n \leq b_n \wedge \lim a_n =\lim b_n \\
-      \Rightarrow (c_n) \quad \text{konvergent und } \lim c_n = \lim a_n
-      \end{split}\]
-    \item \[\lim \frac{a_1+\cdots +a_n}{n}=\lim a_n\]
-    \item \[a_n>0 \Rightarrow \lim \sqrt[n]{a_1\ldots a_n}=\lim a_n\]
-    \item \[a_n>0 \ \lim \frac{a_{n+1}}{a_n} \ \text{existiert }
-      \Rightarrow \sqrt[n]{a_n}=\frac{\lim a_{n+1}}{\lim a_n}\]
+  \item $\lim (a_n +b_n)=\lim a_n+\lim b_n=a+b$
+  \item $\lim (a_nb_n)=\lim a_n \lim b_n =ab$
+  \item $\lim \left(\frac{a_n}{b_n}\right)=\frac{\lim a_n}{\lim
+      b_n}=\frac{a}{b} \text{ falls } b \neq 0 \quad b_n \neq 0$
+  \item $\lim |a_n|=|\lim a_n| =|a|$
+  \item Vergleichssatz\\
+    $\exists m \in \N \ \forall n \geq m \ a_n
+    \leq b_n \Rightarrow \lim a_n \leq \lim b_n \Rightarrow a \leq b$
+  \item $\exists m \in \N \, \forall n \geq m \, a_n \leq c_n \leq b_n
+    \wedge \lim a_n =\lim b_n \Rightarrow (c_n) \text{ konvergent und
+    } \lim c_n = \lim a_n$
+  \item $\lim \frac{a_1+\cdots +a_n}{n}=\lim a_n$
+  \item $a_n>0 \Rightarrow \lim \sqrt[n]{a_1\ldots a_n}=\lim a_n$
+  \item $a_n>0 \, \lim \frac{a_{n+1}}{a_n} \text{ existiert }
+    \Rightarrow \sqrt[n]{a_n}=\frac{\lim a_{n+1}}{\lim a_n}$
   \end{enumerate}
 \end{theorem}
-
-\textbf{Beweis}:
+\begin{proof}
 \begin{enumerate}
-  \item Übung
-  \item zu zeigen: $\forall \varepsilon >0 \ \exists n_{\varepsilon}
-    \in \N\forall n \geq n_{\varepsilon}:$\\
-    $a_nb_n-ab=a_n(b_n-b)+(a_n-a)b$\\
-    $\stackrel{\text{Satz \ref{satz:beschraenkt}}}{\Longrightarrow} (a_n)$ beschränkt, 
-    d.h. $\exists M \geq 0 \ \forall n \in \N \ |a_n| \leq M$\\
-    Sei $\varepsilon > 0$. Dann existiert $n_0,n_1 \in \N$, so
-    dass $|a-a_n| \leq \frac{\varepsilon}{2(|b|+1)}$ für $n \geq n_1$
-    und $|b-b_n| \leq \frac{\varepsilon}{2M}$ für $n \geq n_0$\\
-    Für $n \geq n_{\varepsilon} = \max \{n_0,n_1\}
-    \left.
+\item Übung
+\item zu zeigen: $\forall \varepsilon >0 \ \exists n_{\varepsilon}
+  \in \N\forall n \geq n_{\varepsilon}: a_nb_n-ab=a_n(b_n-b)+(a_n-a)b$\\
+  Nach Satz \ref{satz:beschraenkt} folgt, dass $(a_n)$ beschränkt ist,
+  d.h. $\exists M \geq 0 \, \forall n \in \N \, |a_n| \leq M$.\\
+  Sei $\varepsilon > 0$. Dann existiert $n_0,n_1 \in \N$, so dass
+  $|a-a_n| \leq \frac{\varepsilon}{2(|b|+1)}$ für $n \geq n_1$
+  und $|b-b_n| \leq \frac{\varepsilon}{2M}$ für $n \geq n_0$.\\
+  Für $n \geq n_{\varepsilon} = \max \{n_0,n_1\} \left.
     \begin{array}{rcl}
-    |a_n-a| & \leq & \frac{\varepsilon}{2(|b|+1)}\\
-    |b_n-b| & \leq & \frac{\varepsilon}{2M}
+      |a_n-a| & \leq & \frac{\varepsilon}{2(|b|+1)}\\
+      |b_n-b| & \leq & \frac{\varepsilon}{2M}
     \end{array}
-    \right\}
-    \forall n \geq n_{\varepsilon}$
-    \begin{align*}
-    |a_nb_n-ab| & \leq & |a_n||b_n-b|+|a_n-a||b|\\
-    & \leq & M \frac{\varepsilon}{2M}+\frac{\varepsilon}{2(|b|+1)}|b|\\
-    & \leq & \frac{\varepsilon}{2}+\frac{\varepsilon}{2}=\varepsilon
-    \end{align*}
-  \item $b \neq 0, b_n \neq 0$\\
-    Man zeigt zunächst: $\lim \frac{1}{b_n}=\frac{1}{\lim b}=\frac{1}{b}$\\
-    $b \neq 0 \ \exists n_0 \ \forall n \geq n_0 : |b_n-b|\leq 
-    \frac{|b|}{2}$\\
-    $\overset{\triangle-Ungl.}{\Longrightarrow} |b|-|b_n| \leq |b_n-b|
-    \leq \frac{|b|}{2}$ für $n \geq n_0$\\
-    $\Rightarrow \frac{|b|}{2} \leq |b_n| \quad \forall n \geq n_0$\\
-    Sei $\varepsilon > 0$. Dann $\exists n_1 \in \N : |b_n-b|
-    \leq \frac{\varepsilon |b|^2}{2}$\\
-    Für $n \geq \max \{n_0,n_1\}$ gilt:
-    \[\left|\frac{1}{b_n}-\frac{1}{b}\right|=\frac{|b_n-b|}{|b_n||b|}\leq 
-    \frac{\varepsilon \frac{|b|^2}{2}}{\frac{|b|}{2}|b|}=\varepsilon\]
-    Damit $\lim \frac{a_n}{b_n}=\frac{\lim a_n}{\lim b_n}$ nach Regel 2.
-  \item Sei $\varepsilon > 0$. Dann $\exists n_{\varepsilon} \in 
-    \N:|a_n-a|< \varepsilon \ \forall n \geq n_{\varepsilon}$\\
-    $\overset{\triangle-Ungl.}{\Longrightarrow} ||a_n|-|a||\leq |a_n-a|
-    < \varepsilon \quad \forall n \geq n_{\varepsilon}$\\
-    $\Rightarrow \lim |a_n|=|a|$
-  \item Annahme: $\lim a_n > \lim b_n$\\
-    Dann $\varepsilon = \frac{a-b}{2}$\\
-    $\exists n_0,n_1 \in \N$, so dass $|a_n-a| < \varepsilon$
-    für $n \geq n_0$ und $|b_n-b| < \varepsilon$ für $n \geq n_1$\\
-    $n_{\varepsilon} := \max \{n_0,n_1\}:|a_n-a|<\varepsilon, |b_n-b|<
-    \varepsilon$\\
-    Insbesondere da $\varepsilon = \frac{a-b}{2}$, folgt $a-\varepsilon
-    = b + \frac{a-b}{2}= \frac{a+b}{2}<a_n$ und $b_n<b+\varepsilon=\frac{a+b}{2} \ \forall
-    n \geq n_{\varepsilon}$\\
-    $\Rightarrow b_n < a_n \quad \forall n \geq n_{\varepsilon}$
-    \lightning\\
-    \qed
-  \item Sei $\varepsilon > 0$. Dann $\exists n_0, n_1 \in \N$\\
-    $|a_n-a|<\varepsilon \qquad |b_n-a|<\varepsilon n_{\varepsilon}:=
-    \max \{n_0,n_1\}$\\
-    $a-\varepsilon \leq a_n \leq c_n \leq b_n \leq a+\varepsilon$\\
-    $\Rightarrow |c_n-a| \leq \varepsilon \quad \forall n \geq n_{\varepsilon}$\\
-    $\Rightarrow \lim c_n = a$
+  \right\}
+  \forall n \geq n_{\varepsilon}$
+  \begin{align*}
+    |a_nb_n-ab| & \leq |a_n||b_n-b|+|a_n-a||b|
+    \leq M \frac{\varepsilon}{2M}+\frac{\varepsilon}{2(|b|+1)}|b|\\
+    & \leq \frac{\varepsilon}{2}+\frac{\varepsilon}{2}=\varepsilon
+  \end{align*}
+\item Seien $b$ und $ b_n \neq 0$. Man zeigt zunächst: $\lim
+  \nicefrac{1}{b_n}=\nicefrac{1}{\lim b}=\nicefrac{1}{b}$. Aus der
+  Tatsache, dass $\exists n_0 \ \forall n \geq n_0 : |b_n-b|\leq
+  \nicefrac{|b|}{2}$ für $b\neq 0$ folgt nach der Dreiecksungleichung,
+  dass $|b|-|b_n| \leq |b_n-b| \leq \frac{|b|}{2}$ für $n \geq
+  n_0$. Daraus kann man nun für alle $n\geq n_0$ schließen, dass
+  $\nicefrac{|b|}{2} \leq |b_n|$\\
+  Sei $\varepsilon > 0$. Dann $\exists n_1 \in \N : |b_n-b| \leq
+  \nicefrac{\varepsilon |b|^2}{2}$ und für $n \geq \max \{n_0,n_1\}$
+  gilt:
+  \[\left|\frac{1}{b_n}-\frac{1}{b}\right|=\frac{|b_n-b|}{|b_n||b|}\leq
+  \frac{\varepsilon \nicefrac{|b|^2}{2}}{\nicefrac{|b|}{2}|b|}=\varepsilon\]
+  Damit ist nach Regel~2 $\lim \frac{a_n}{b_n}=\frac{\lim a_n}{\lim b_n}$.
+\item Sei $\varepsilon > 0$. Dann $\exists n_{\varepsilon} \in
+  \N:|a_n-a|< \varepsilon \ \forall n \geq n_{\varepsilon}$. Nach der
+  Dreiecksungleichung folgt für alle $n\geq n_\varepsilon:
+  ||a_n|-|a||\leq |a_n-a| < \varepsilon \Rightarrow \lim |a_n|=|a|$.
+\item Annahme: $\lim a_n > \lim b_n$. Dann ist $\varepsilon =
+  \nicefrac{a-b}{2}$ und es existieren $n_0,n_1 \in \N$, so dass
+  $|a_n-a| < \varepsilon$ für $n \geq n_0$ und $|b_n-b| < \varepsilon$
+  für $n \geq n_1$. Wir definieren $n_{\varepsilon} := \max
+  \{n_0,n_1\}:|a_n-a|<\varepsilon, |b_n-b|<\varepsilon$. Insbesondere
+  da $\varepsilon = \nicefrac{a-b}{2}$ ist, folgt für alle $n\geq n_0:
+  a-\varepsilon = b + \nicefrac{a-b}{2}= \nicefrac{a+b}{2}<a_n$ und
+  $b_n<b+\varepsilon=\nicefrac{a+b}{2}$
+  $\Rightarrow b_n < a_n \quad \forall n \geq n_{\varepsilon}$\lightning\\
+  \qed
+\item Sei $\varepsilon > 0$. Dann $\exists n_0, n_1 \in \N$,
+  $|a_n-a|<\varepsilon$ und $|b_n-a|<\varepsilon$. Sei $n_{\varepsilon}:=
+  \max \{n_0,n_1\}$.
+  \begin{align*}
+  a-\varepsilon &\leq a_n \leq c_n \leq b_n \leq a+\varepsilon\\
+  &\Rightarrow |c_n-a| \leq \varepsilon & \forall n \geq n_{\varepsilon}\\
+  &\Rightarrow \lim c_n = a
+  \end{align*}
 \end{enumerate}
+\end{proof}
 
-Beispiel: $q \in \R \qquad a_n := q^n$
-\[\lim q^n =
-\begin{cases}
-0 \qquad |q| < 1\\
-1 \qquad q = 1\\
-divergent \qquad & |q|>1 \vee q=-1
-\end{cases}\]
-
-\textbf{Beweis}:
-\begin{enumerate}
-  \item[1. Fall] $q=0 \Rightarrow q^n=0 \Rightarrow \lim q^n=0$
-  \item[2. Fall] $0<|q|<1$ Man setzt $h:=\frac{1}{|q|}-1>0$\\
-    $\Rightarrow |q| = \frac{1}{1+n} \quad 0<|q|^n = \frac{1}{(1+h)^n} \leq
-    \frac{1}{1+nh} \leq \frac{1}{nh}$\\
-    $\overset{Satz \ref{satz:rechenregel} Pkt. 6}{\Longrightarrow} \lim |q|^n=0
-    \Rightarrow \lim q^n=0$
-  \item[3. Fall] $q=1 \Rightarrow q^n =1 \Rightarrow \lim q^n=1$
-  \item[4. Fall] $q=-1 \qquad a_n=q^n=(-1)^n$ ist divergent\\
-    Annahme: $\exists a \in \R : a_n \rightarrow a$, Für $\varepsilon 
-    =\frac{1}{2} \Rightarrow \exists n_0 \in \N \forall n \geq n_0 :
-    |a_n-a|<\frac{1}{2}$\\
-    Somit gilt: \begin{align*}
-    a_{n+1}-a_n& = & (-1)^{n+1}-(-1)\\
-    & = & (-1)^n(-1-1)\\
-    & = & (-)^n(-2)
+\begin{beispiel}
+  Sei $q \in \R$ und $a_n := q^n$.
+  \[\lim q^n =
+  \begin{cases}
+    0 \qquad |q| < 1\\
+    1 \qquad q = 1\\
+    divergent \qquad & |q|>1 \vee q=-1
+  \end{cases}\]
+\begin{proof}
+  \begin{enumerate}[1.~F{a}ll]
+  \item $q=0 \Rightarrow q^n=0 \Rightarrow \lim q^n=0$
+  \item $0<|q|<1$\\
+    Man setzt:
+    \begin{align*}
+      h &:= \nicefrac{1}{|q|}-1>0\Rightarrow |q| = \frac{1}{1+h}\\
+      0 &<|q|^n = \frac{1}{(1+h)^n} \leq \frac{1}{1+nh} \leq
+      \frac{1}{nh}
     \end{align*}
-    $2=|a_{n+1}-a_n| \leq |a_{n+1}-a|+|a-a_n| \leq \frac{1}{2}+\frac{1}{2}=1$
-    für $n \geq n_0$ \lightning\\
-    $\Rightarrow a_n=(-1)^n$ ist divergent
-  \item[5. Fall] $|q|>1$ Annahme $q^n$ ist konvergent $\overset{Satz
-    \ref{satz:beschraenkt}}{\Longrightarrow} q^n$ beschränkt, d.h. $\exists M >
-    0 \ \forall n \in \N : |q^n| \leq M \Rightarrow M \geq |q^n|=|q|^n
-    =\underbrace{(1+(|q|-1)^n}_{>0} \geq 1+n(|q|-1) \geq n(|q|-1)$\\
+    Nach Satz~\ref{satz:rechenregel} Punkt~6 folgt damit, $\lim |q|^n=0
+    \Rightarrow \lim q^n=0$.
+  \item $q=1 \Rightarrow q^n =1 \Rightarrow \lim q^n=1$
+  \item $q=-1$\\
+    $a_n=q^n=(-1)^n$ ist divergent. Angenommen, es existiert ein $a
+    \in \R : a_n \rightarrow a$, Für $\varepsilon=\nicefrac{1}{2}
+    \Rightarrow \exists n_0 \in \N \forall n \geq n_0 :
+    |a_n-a|<\nicefrac{1}{2}$. Somit gilt:
+    \begin{align*}
+    a_{n+1}-a_n& = (-1)^{n+1}-(-1)^n = (-1)^n(-1)-(-1)^n =  (-1)^n(-2)\\
+    |-2|=2 &= |a_{n+1}-a_n| \leq |a_{n+1}-a|+|a-a_n| \leq
+    \nicefrac{1}{2} +\nicefrac{1}{2}=1
+    \end{align*}
+    für $n \geq n_0$ \lightning
+  \item $|q|>1$\\
+    Annahme: $q^n$ ist konvergent. Dann ist nach
+    Satz~\ref{satz:beschraenkt} $q^n$ beschränkt, d.h. $\exists M >
+    0 \, \forall n \in \N : |q^n| \leq M \Rightarrow M \geq |q^n|=|q|^n
+    =\underbrace{(1+|q|-1)^n}_{>0} \geq 1+n(|q|-1) \geq n(|q|-1)$\\
     $\Rightarrow n \leq \frac{M}{|q|-1} \Rightarrow \N$ ist beschränkt
     \lightning
-    \qed
 \end{enumerate}
+\end{proof}
+\end{beispiel}
 
 \begin{remark}
-  Bestimmte Divergenz\index{Divergenz!bestimmte} (=uneigentliche Konvergenz\index{Konvergenz!uneigentliche}) gegen $+\infty$ bzw.
-  $-\infty$: Eine Folge $(a_n) \subset \R$ heißt \index{bestimmt divergent}
-  gegen $+\infty \ (-\infty) : \Leftrightarrow \forall M \in \R \
-  \exists n_M \in \N \ \forall n \geq n_M : a_n \geq M (a_n \leq M)$
+  \emph{Bestimmte
+    Divergenz\index{Divergenz!bestimmte}}\footnote{Schreibweise: $\lim
+    a_n = +\infty \qquad a_n \rightarrow \infty$\\} (=uneigentliche
+  Konvergenz\index{Konvergenz!uneigentliche}) gegen $+\infty$ bzw.
+  $-\infty$: Eine Folge $(a_n) \subset \R$ heißt \emph{bestimmt
+    divergent} gegen $+\infty \ (-\infty) : \Leftrightarrow \forall M
+  \in \R \, \exists n_M \in \N \, \forall n \geq n_M : a_n \geq M (a_n
+  \leq M)$
 \end{remark}
-Schreibweise: $\lim a_n = +\infty \qquad a_n \rightarrow \infty$\\
-Beispiele:
+
+\begin{beispiel}
 \begin{align*}
-a_n=n & \qquad & \lim a_n=\infty\\
-a_n=-n & \qquad & \lim a_n =-\infty\\
-a_n=(-1)^n  \qquad \text{nicht bestimmt divergent}
+  a_n& =n & \lim a_n &=\infty\\
+  a_n &=-n  & \lim a_n &=-\infty\\
+  a_n &=(-1)^n & \text{nicht bestimmt divergent}
 \end{align*}
+\end{beispiel}
 
 $\infty$ ist keine relle Zahl. Denn wäre $\infty$ eine reelle Zahl, so würde
 für die Folgen $a_n=a$ und $b_n=1 \quad \lim (a_n+b_n) = \lim a_n + \lim b_n$
 gelten. $\infty=\lim(n+1)=\lim n + \lim 1 = \infty +1 \Rightarrow 0=1$
-\lightning .
+\lightning.
 
 \subsubsection{Monotone Folgen}
-\begin{definition}
-  \textbf{monotone Folge} Eine Zahlenfolge $(a_n) \subset \R$ heißt
-  monoton wachs\-end (fallend) :$\Leftrightarrow \forall n,m \in \N:n<m
-  \Rightarrow a_n \leq a_m (a_n \geq a_m)$
+\begin{definition}[monotone Folgen Eine Zahlenfolge $(a_n) \subset \R$
+  heißt \emph[monoton wachsend (fallend)}\index{monoton}
+\index{Folge!monotone} $\perdef \forall n,m \in \N:n<m \Rightarrow a_n
+\leq a_m (a_n \geq a_m)$.
 \end{definition}
 
 \begin{theorem}
-\label{satz:monotoneFolge}
+  \label{satz:monotoneFolge}
   \begin{enumerate}
-    \item Für eine monoton wachsende nach oben beschränkte Folge $(a_n) \subset
-      \R$ gilt: $\lim a_n = \sup \{a_n\}$
-    \item Für eine monoton fallende nach oben beschränkte Folge $(a_n) \subset
-      \R$ gilt: $\lim a_n = \inf \{a_n\}$
+  \item Für eine monoton wachsende und nach oben beschränkte Folge
+    $(a_n) \subset \R$ gilt: $\lim a_n = \sup \{a_n\}$
+  \item Für eine monoton fallende nach oben beschränkte Folge $(a_n)
+    \subset \R$ gilt: $\lim a_n = \inf \{a_n\}$
   \end{enumerate}
 \end{theorem}
-
-\textbf{Beweis}:
+\begin{proof}
 \begin{enumerate}
   \item $a := \sup \{a_n\} \in \R$ Vollständigkeitsaxiom\\
     Sei $\varepsilon > 0 \quad \exists n_{\varepsilon} \in \N :a-
@@ -1047,8 +1053,8 @@ gelten. $\infty=\lim(n+1)=\lim n + \lim 1 = \infty +1 \Rightarrow 0=1$
     a_n \leq a+\varepsilon$\\
     $\Rightarrow |a_n-a| \leq \varepsilon$ für $n \geq n_{\varepsilon}
     \Rightarrow \lim a_n= \sup \{a_n\}$
-    \qed
 \end{enumerate}
+\end{proof}
 
 Beispiel:
 \begin{enumerate}
