--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -1029,10 +1029,10 @@ gelten. $\infty=\lim(n+1)=\lim n + \lim 1 = \infty +1 \Rightarrow 0=1$
 \lightning.
 
 \subsubsection{Monotone Folgen}
-\begin{definition}[monotone Folgen Eine Zahlenfolge $(a_n) \subset \R$
-  heiﬂt \emph[monoton wachsend (fallend)}\index{monoton}
-\index{Folge!monotone} $\perdef \forall n,m \in \N:n<m \Rightarrow a_n
-\leq a_m (a_n \geq a_m)$.
+\begin{definition}[monotone Folgen] Eine Zahlenfolge $(a_n) \subset \R$
+  heiﬂt \emph{monoton wachsend (fallend)}\index{monoton}
+  \index{Folge!monotone} $\perdef \forall n,m \in \N:n<m \Rightarrow a_n
+  \leq a_m (a_n \geq a_m)$.
 \end{definition}
 
 \begin{theorem}
@@ -1056,7 +1056,7 @@ gelten. $\infty=\lim(n+1)=\lim n + \lim 1 = \infty +1 \Rightarrow 0=1$
 \end{enumerate}
 \end{proof}
 
-Beispiel:
+
 \begin{enumerate}
   \item \[\lim_{n \rightarrow \infty} \sum_{k=0}^n \frac{1}{k!}=e \qquad a_n=
     1+1+\frac{1}{2!}+\frac{1}{3!}+\cdots + \frac{1}{n!}\]
