--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -11,12 +11,7 @@
 % \usepackage{nicefrac}
 % \usepackage{tabularx}
 
-% Schrift, die als serifen-Schrift (normale Text) verwendet wird
-%  Ich finde Times sieht kräftiger aus, als die beiden anderen, was sich
-%  IMO vorteilhaft bei 2 auf 1-Drucken auswirkt
 \usepackage{times}		% Times
-% \usepackage{lmodern}		% Latin Modern
-% \usepackage{type1ec}		% cm-super
 
 % Schrift, die für serifenlose Schrift (\textsf{}) verwendet wird
 \usepackage{helvet}
@@ -45,6 +40,10 @@
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
 \addtokomafont{sectioning}{\boldmath}
 
+\makeatletter
+\def\@thmcountersep{/}
+\makeatother
+
 % nach dem Theoremkopf wird ein Zeilenumbruch eingefügt, die Schrift des
 % Körpers ist normal und der Kopf wird fett gesetzt
 \theoremstyle{break}
@@ -54,11 +53,11 @@
 
 % Die folgenden Umgebungen werden einzeln nummeriert und am Ende jedes
 % Kapitels zurückgesetzt
-\newtheorem{satz}{Satz}[chapter]
-\newtheorem{bemerk}{Bemerkung}[chapter]
-\newtheorem{defini}{Definition}[chapter]
-\newtheorem{bsp}{Beispiel}[chapter]
-\newtheorem{festl}{Festlegung}[chapter]
+\newtheorem{satz}{Satz}[subsection]
+\newtheorem{bemerk}[satz]{Bemerkung}
+\newtheorem{defini}[satz]{Definition}
+\newtheorem{bsp}[satz]{Beispiel}
+\newtheorem{festl}[satz]{Festlegung}
 
 % Die folgenden Theoremumgebungen bekommen keine Nummer
 \theoremstyle{nonumberbreak}
@@ -121,11 +120,11 @@
 % Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
 % sondern \Leftrightarrow.
 \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw\mspace{8mu}}%
-			       {$gdw$\xspace}}
+			       {\Leftrightarrow}%
+			       {$\gdw$\xspace}}
 \newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-			       {$gdw_{def}$\xspace}}
+			       {:\Leftrightarrow}%
+			       {$\gdwdef$\xspace}}
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
@@ -315,7 +314,7 @@
   \begin{enumerate}
    \item $\Div, \grad, \rot$ sind linear
    \item $\grad(f\cdot g) = g(\grad f) + f(\grad g)$
-   \item $\Div(f\cdot \vec{H} = f\Div\vec{H} + (\grad f)\cdot\vec{H}$
+   \item $\Div(f\cdot \vec{H}) = f\Div\vec{H} + (\grad f)\cdot\vec{H}$
    \item $\Div(\vec{H}\times \vec{K}) = (\rot\vec{H}) \cdot \vec{K} -
     \vec{H}\cdot (\rot\vec{K})$
    \item $\rot (f\cdot\vec{H}) = f(\rot\vec{H})+(\grad f)\times \vec{H}$
@@ -387,6 +386,210 @@ Eine kurze Widerholung auf Abschnitt\,7.2
   \end{gather*}
 \end{defini}
 
+% 26.10.05
+
+\begin{bsp}
+  \begin{align*}
+    x^{0} &= (0,0,0)\\
+    x^{1} &= (1,0,0)\\
+    x^{2} &= (1,1,0)\\
+    x^{3} &= (1,1,1)\\
+    \vec{V}(x) = \begin{bmatrix}x_{1}\\x_{1}x_{2}\\x_{1}x_{2}x_{3}\end{bmatrix}
+  \end{align*}
+
+  \begin{align*}
+    \int_{\Gamma} \vec{V}\cdot\vec{dx}
+       &= \int_{0}^{1} \begin{bmatrix}x_{1}\\0\\0\end{bmatrix}\cdot
+       \begin{bmatrix}1\\0\\0\end{bmatrix}\,dx_{1}
+       + \int_{0}^{1} \begin{bmatrix}1\\x_{2}\\0\end{bmatrix} \cdot
+       \begin{bmatrix}0\\1\\0\end{bmatrix}\,dx_{2} + \int_{0}^{1}
+       \begin{bmatrix}1\\1\\x_{3}\end{bmatrix}\cdot
+       \begin{bmatrix}0\\0\\1\end{bmatrix}\,dx_{3}\\
+    &= 3\int_{0}^{1} x_{1}\,dx_{1} = \frac{3}{2}
+  \end{align*}
+\end{bsp}
+
+\begin{satz}[Kurvenintegral\help{stimmt das?}]\label{satz:8.1.2/5}
+  (vergleiche mit Satz 7.2.2/7) $\Omega\subseteq\R^{n}$ offen, $(\Gamma,
+  \phi)$ Kurve in $\Omega$, $u:\Omega\rightarrow\R$ stetig
+  differenzierbar ($u\in C^{1}(\Omega)$), $\vec{V} = \grad u, x^{0} =
+  \phi(a)$ Anfangspunkt, $x^{1}=\phi(b)$ Endpunkt von $\Gamma$.
+  Dann ist
+  \begin{gather*}
+    \int_{\Gamma} \vec{V}\cdot\vec{dx} = u(x^{1})-u(x^{0})
+  \end{gather*}
+
+  \begin{proof}
+    \begin{align*}
+      \int_{\Gamma_{j}} \vec{V}\cdot\vec{dx} &= \int_{t_{j-1}}^{t_{j}}
+         \vec{V}(\phi(t))+\dot{\phi}(t)\,dt = \int_{t_{j-1}}^{t_{j}} \big(
+         \sum_{k=1}^{n} v_{k}(\phi(t))\cdot\dot{\phi}_{k}(t) \big)\,dt\\
+      &= \int_{t_{j-1}}^{t_{j}} \underbrace{\sum_{k=1}^{n} \frac{\partial u}{\partial
+         x_{k}}\big(\phi(t)\big)\cdot\dot{\phi}_{k}(t)\,dt}
+         _{\frac{d}{dt}\big(u(\phi(t))\big)} &&v_{k}=\frac{\partial
+         u}{\partial x_{k}}
+         &= u(\phi(t))\big|_{t_{j-1}}^{t_{j}} = u(\phi(t_{j}))
+         -u(\phi(t_{j-1}))\\
+      \int_{\Gamma} \vec{V}\vec{dx} &= \sum_{j=1}^{N} \int_{\Gamma_{j}}
+         \vec{V}\vec{dx} = \sum_{j=1}^{N} \big(
+         u(\phi(t_{j}))-u(\phi(t_{j-1})) \big)\\
+      &= u(\phi(b)) - u(\phi(a)) = u(x^{1}) - u(x^{0})
+    \end{align*}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  $\vec{V} = \grad u$ dann ist $\int_{\Gamma}\vec{V}\vec{dx}$ ist
+  "`\highl{wegunabhängig}"', nur von Anfangs- und Endpunkt abhängig.
+
+  Und $\int_{\Gamma}\vec{V}\vec{dx}=0$ für alle \highl{geschlossenen
+  Kurven} in $\Omega$.
+\end{bemerk}
+
+\begin{defini}
+  $\Omega\subseteq\R^{n}$ offen und $\vec{V}$ stetiges Vektorfeld auf
+  $\Omega$. $\vec{V}$ heißt \highl{konservativ} \gdwdef $\forall
+  x^{0},x^{1}\in\Omega$ und für alle Kurven $\Gamma_{1}$ und $\Gamma_{2}$
+  von $x^{0}$ nach $x^{1}$ gilt:
+  \begin{gather*}
+    \int_{\Gamma_{1}} \vec{V}\vec{dx} = \int_{\Gamma_{2}}\vec{V}\vec{dx}
+  \end{gather*}
+\end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item äquivalent:
+    \begin{gather*}
+      \int_{\Gamma} \vec{V}\vec{dx}=0\quad\forall\text{geschlossenen
+         Kurven}
+    \end{gather*}
+   \item $\vec{V}=\grad u$ $\Rightarrow$ $\vec{V}$ konservativ
+    (\autoref{satz:8.1.2/5})
+   \item Gilt auch die Umkehrung von (2)?
+  \end{enumerate}
+\end{bemerk}
+
+\begin{defini}
+  Eine offene Menge $\Omega\subseteq\R^{n}$ heißt \highl{zusammenhängend}
+  \gdwdef für je zwei Punkte $x^{0}$ und $x^{1}$ aus $\Omega$ existiert
+  ein Polygonenzug \emph{in $\Omega$} von $x^{0}$ nach $x^{1}$.
+
+  Eine offene zusammenhängende Menge bezeichnet man als \highl{Gebiet}.
+\end{defini}
+
+\begin{satz}\label{satz:8.1.2/10}
+  Für ein Gebiet $\Omega\subseteq\R^{n}$ und ein stetiges Vektorfeld
+  $\vec{V}:\Omega\rightarrow\R^{n}$, gilt:
+  \begin{enumerate}
+   \item $\vec{V}$ konservativ $\Rightarrow$ $\exists u\in
+    C^{1}(\Omega)$, sodass $\vec{v} = \grad u$
+
+    Konservative Vektorfelder besitzen ein Potential.
+   \item $\vec{V}$ konservativ $\Rightarrow$ $u$ aus (1) ist bis auf eine
+    additive Konstante bestimmt. ($\grad u = \grad \tilde{u} \Rightarrow
+    u=\tilde{u}+const$)
+  \end{enumerate}
+
+  $-u$ heißt in der Physik \highl{Potential} des Vektorfelds $\vec{V}$.
+
+  \begin{proof}
+    Wir halten $x^{0}\in\Omega$ fest und wählen $x\in\Omega$
+    beliebig. Da $\Omega$ ein Gebiet ist, findet man eine Kurve von
+    $x^{0}$ nach $x$. $\Gamma$ sei eine solche Kurve. Wir definieren $u$
+    als
+    \begin{gather*}
+      u(x) := \int_{\Gamma}\vec{v}\cdot\vec{dx}
+    \end{gather*}
+    Dies ist sinnvoll, da $u$ unabhängig von $\Gamma$ ist, da $\vec{V}$
+    konservativ ist.
+
+    $\forall x\in\Omega \exists K_{\delta}(x)\subseteq\Omega$. Für
+    $\abs{t}<\delta$ gilt
+    \begin{align*}
+      \frac{1}{t}u(x+t\vec{e_{j}})-u(x) &= \frac{1}{t} \int_{0}^{t}
+         \vec{V}(x+\tau e_{j})\cdot e_{j}\,d\tau\\
+      &= \frac{1}{t} \int_{0}^{t} v_{j} (x+ \tau \vec{e_{j}})\,d\tau\\
+      &= v_{j}(x+se_{j}) &&\text{nach MWS der Int., wobei $s\in(0,t)$}\\
+      &\xrightarrow{t\rightarrow0} v_{j}(x)
+    \end{align*}
+    Das heißt $\frac{\partial u}{\partial x_{j}}(x) = v_{j}(x)$.
+
+    Zu (2) die folgende Annahme: $\grad \tilde{u} = \grad u =\vec{V}$ Dann:
+    \begin{gather*}
+      u(x) = \int_{\Gamma}\vec{V}\,dx =^{nach \autoref{satz:8.1.2/5}}
+         \tilde{u}(x)-\tilde{u}(x^{0}) \forall x
+    \end{gather*}
+    $\Rightarrow$ $u(x)-\tilde{u}(x) = u(x^{0}) = const$.
+  \end{proof}
+\end{satz}
+
+\begin{folger}\label{fol:8.1.2/11}
+  Teil (1) aus \autoref{satz:8.1.2/10} gilt auch für beliebige offene
+  Mengen $\Omega\subseteq\R^{n}$.
+
+  \begin{proof}
+    $\Omega=\bigcup_{k=1}^{\infty}\Omega_{k}$ $\Omega_{k}$ sind die
+    \highl{Zusammenhangskomponenten} von $\Omega$ und damit
+    $\Omega_{k}\cap\Omega_{j}=\emptyset$ für $j\not=k$. $\Omega_{k}$ ist
+    ein Gebiet und man kann \autoref{satz:8.1.2/10} auf $\Omega_{k}$
+    anwenden.
+  \end{proof}
+\end{folger}
+
+\begin{lemma}\label{lem:8.1.2/11}
+  $\vec{V}:\Omega\rightarrow\R^{n}$ ein $C^{1}$-Vektorfeld und $\Omega$
+  offen, $\vec{V}$ sei konservativ. Dann gilt
+  \begin{gather*}
+    \partial_{j} v_{k} = \partial_{k} v_{j} \forall j,k=1,\ldots,n
+  \end{gather*}
+
+  Für $n=3$ bedeutet das:
+  \begin{gather}\label{eq:1}
+    \rot \vec{V}=0
+  \end{gather}
+
+  \begin{proof}
+    \autoref{satz:8.1.2/10} + \autoref{fol:8.1.2/11} $\Rightarrow$
+    $\vec{V}=\grad u$, d.\,h. $\frac{\partial u}{\partial x_{j}}$
+    ($j=1,\ldots,n$) \help{Aus irgendeinem Grunde ist} $u\in
+    C^{2}(\Omega)$!
+
+    Nach dem Satz von Schwarz gilt
+    \begin{gather*}
+      \frac{\partial v_{j}}{\partial x_{k}} = \frac{\partial}{\partial
+         x_{k}}\big(\frac{\partial u}{\partial x_{j}}\big) =
+         \frac{\partial}{\partial x_{j}}\big(\frac{\partial u}{\partial
+         x_{k}}\big) = \frac{\partial v_{k}}{\partial x_{j}}
+    \end{gather*}
+  \end{proof}
+\end{lemma}
+
+Die Umkehrung von \autoref{lem:8.1.2/11} gilt im allgemeinen \emph{nicht}.
+\begin{bsp}
+  $n=2$. $\Omega=\R^{2}\setminus\{0\}$ ist ein Gebiet. Betrachten wir
+  \begin{gather*}
+    \vec{V}(x,y) = \frac{1}{x^{2}+y^{2}} \begin{bmatrix}-y\\x\end{bmatrix}
+  \end{gather*}
+
+  $\Rightarrow$
+  \begin{align*}
+    \partial_{1}v_{2} &= \frac{\partial}{\partial x}
+       \big(\frac{x}{x^{2}+y^{2}}\big) =
+       \frac{x^{2}+y^{2}-2x}{(x^{2}+y^{2})^{2}} =
+       \frac{y^{2}-x^{2}}{(x^{2}-y^{2})^{2}}\\
+    \partial_{2} v_{1} = \frac{\partial}{\partial
+       y}\big(\frac{-y}{x^{2}+y^{2}}\big) = -\frac{\partial}{\partial y}
+       \big(\frac{y}{x^{2}+y^{2}}\big) =
+       \frac{y^{2}-x^{2}}{(x^{2}-y^{2})^{2}}
+  \end{align*}
+  Das heißt, es gilt \autoref{eq:1}. Aber $\Gamma$ Einheitskreis: $x=\cos
+  t, y=\sin t, t\in[0,2\pi]$
+  \begin{gather*}
+    \int_{\Gamma}\vec{V}\vec{dx} = \int_{0}^{2\pi}
+       \begin{bmatrix}-\sin t\\\cos t\end{bmatrix}
+       \begin{bmatrix}-\sin t\\\cos t\end{bmatrix}\,dt = 2\pi \not= 0
+  \end{gather*}
+\end{bsp}
 \pdfbookmark[0]{Litheraturverzeichnis}{litheraturverzeichnis}
 \begin{thebibliography}{Hirzebruch}
  \bibitem{Triebel} H. Triebel: Höhere Analysis, Harri Deutsch 1980 (empfohlen)
