* Kleine Korrektur des Zeilenumbruchs
git-svn-id: https://svn.lug-jena.de/uni-skripte@157 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -430,8 +430,8 @@ Eine kurze Widerholung auf Abschnitt\,7.2
       &= \int_{t_{j-1}}^{t_{j}} \underbrace{\sum_{k=1}^{n} \frac{\partial u}{\partial
          x_{k}}\big(\phi(t)\big)\cdot\dot{\phi}_{k}(t)\,dt}
          _{\frac{d}{dt}\big(u(\phi(t))\big)} &&v_{k}=\frac{\partial
-         u}{\partial x_{k}}
-         &= u(\phi(t))\big|_{t_{j-1}}^{t_{j}} = u(\phi(t_{j}))
+         u}{\partial x_{k}}\\
+      &= u(\phi(t))\big|_{t_{j-1}}^{t_{j}} = u(\phi(t_{j}))
          -u(\phi(t_{j-1}))\\
       \int_{\Gamma} \vec{V}\vec{dx} &= \sum_{j=1}^{N} \int_{\Gamma_{j}}
          \vec{V}\vec{dx} = \sum_{j=1}^{N} \big(
