Fixed Kapitel 1.4: Typos und falsche Gleichungsvariablen, im Einklang mit der neuen Vorlesung von Linde
git-svn-id: https://svn.lug-jena.de/uni-skripte@161 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik/skript.latex
+++ b/linde-stochastik/skript.latex
@@ -557,13 +557,13 @@ Verteile Teilchen auf die Kästen so, dass alle Verteilungen gleichwahrscheinlich
 $A:=\lb\text{In n vorgegebenen Kästen $K_1,\ldots,K_n$ befindet sich genau ein Teilchen}\rb$\\ \vspace{0.5cm}
 $B:=\lb\text{In keinem Kasten ist mehr als ein Teilchen}\rb$\\
 Zu \ref{item:fall1}: \underline{Boltzmann-Statistik} (Teilchen tragen Namen)\\
-$\Omega=\blb(a_1,\ldots,a_n);a_j\in \lb1,\ldots,\rb\brb$\\
+$\Omega=\blb(a_1,\ldots,a_n);a_j\in \lb1,\ldots,N\rb\brb$\\
 $(a_1,\ldots,a_n)$ ist eingetreten $\Leftrightarrow$ Teilchen k im Kasten $a_k ($für $k=1,\ldots,N)$\\
-$$\sharp(\Omega)=N^m$$\\
+$$\sharp(\Omega)=N^n$$\\
 Günstig für A: Ist $(K_1,\ldots,K_n)$ und alle Permutationen davon\\
-$$\sharp(A)=n! \qquad \Rightarrow \qquad \p(A)=\frac{n!}{N^m}$$\\
+$$\sharp(A)=n! \qquad \Rightarrow \qquad \p(A)=\frac{n!}{N^n}$$\\
 Man kann $\binom{N}{m}$ Kästen $K_1,\ldots,K_n$ vorher auswählen\\
-$$ \ar \quad \p(B)=\binom{N}{m}\p(A)=\binom{N}{n}\binom{n!}{N^n}=\frac{N!}{(N-n)!N^n}$$\\
+$$ \ar \quad \p(B)=\binom{N}{n}\p(A)=\binom{N}{n}\binom{n!}{N^n}=\frac{N!}{(N-n)!N^n}$$\\
 Zu \ref{item:fall2}: \underline{Bose-Einstein-Statistik} (Teilchen anonym)\\
 
 %Abbildung
@@ -571,12 +571,10 @@ Zu \ref{item:fall2}: \underline{Bose-Einstein-Statistik} (Teilchen anonym)\\
 N Kästen $\Leftrightarrow n-1 \quad$ Trennwände (2 äußere Trennwände fest)\\
 Alle Anordnungen von $N-1$ Trennwände und n Teilchen\\
 $$\Omega=\lb(\omega_1,\ldots,\omega_{N+n-1})\rb \qquad n \text{ der } \omega_j \text{ sind Teilchen, N-1 Trennwände}$$\\
-\begin{Bsp}
-        %Abbildung
-        $\ar (t,t,T,T,t) \qquad \sharp(\Omega)=(N+n-1)! \qquad \sharp(A)=n!(N-1)! \qquad
-        \p(A)=\frac{n!(N-1)!}{(N+n-1)!}$\\
-        $\ar \p(B)=\binom{N}{1}\p(A)=\frac{N!(N-1)!}{(N-m)!(N+n-1)!}$
-\end{Bsp}
+%Abbildung
+$\ar \sharp(\Omega)=(N+n-1)! \qquad \sharp(A)=n!(N-1)! \qquad
+\p(A)=\frac{n!(N-1)!}{(N+n-1)!}$\\
+$\ar \p(B)=\binom{N}{n}\p(A)=\frac{N!(N-1)!}{(N-m)!(N+n-1)!}$
 
 Zu \ref{item:fall3}: \underline{Fermi-Dirac-Statistik} (Teilchen anonym, max. ein Teil pro Kasten)\\
 $$\Omega=\blb(k_1,\ldots,k_n):1\leq k_j \leq N;\quad k_i \neq k_j;\quad i\neq j \brb$$
@@ -587,32 +585,33 @@ $$\ar \quad \p(A)=\frac{n!}{N\cdot\ldots\cdot(N-n+1)}=\frac{1}{\binom{N}{n}};\qu
 \p(B)=\binom{N}{n}\frac{1}{\binom{N}{n}}=1$$\\}
         \item {\underline{Binominialverteilung:}\\
                 \index{Binominialverteilung}
-                Modell: In Jedem Versuch erscheine die Null oder die Eins\\
-                "`1"' mit Wahrscheinlcihkeit: $\p\in \left[0,1\right]$ und "`0"' mit $1-p$\\
-                n-unabhängige Versuche. Wir suchen die Wahrscheinlichkeit k-mal 1 $\p(k-mal 1)$\\
+                Modell: In Jedem Versuch ist das Resultat entweder Null oder Eins\\
+                Die Wahrscheinlichkeit einer "`1"' ist: $p\in \left[0,1\right]$ und "`0"' mit $1-p$\\
+                Es gibt $n$ unabhängige Versuche. Wir suchen die Wahrscheinlichkeit $\p(k-mal 1)$\\
                 $$\p(k-mal 1)\overbrace{=}^{\text{später}}\binom{n}{k}p^k(1-p)^{n-k}$$
                 $$\Omega=\lb0,\ldots,n\rb \qquad 0\leq p \leq 1;$$\\
                 $$\boxed{B_{n,p}(\lb k\rb):=\binom{n}{k}p^k(1-p)^{n-k};\quad k=0,\ldots,n}$$
-                zu zeigen: $B_{n,p}(\lb k\rb)\geq0;$ $$\sum^n_{k=0}{B_{n,p}(\lb k\rb)}=1
-                \sum^n_{k=0}{\binom{n}{k}p^k(1-p)^{n-k}}=(p+(1-p))^n=1^n=1$$\
+                zu zeigen: $B_{n,p}(\lb k\rb)\geq0$ (klar), bleibt zu zeigen: $$\sum^n_{k=0}{B_{n,p}(\lb k\rb)}=1$$
+		Mit dem binomischen Satz gilt:
+                \[\sum^n_{k=0}{\binom{n}{k}p^k(1-p)^{n-k}}=(p+(1-p))^n=1^n=1\]\\
                 $\ar B_{n,p}$ ist \WM auf $\Omega$: Binominialverteilung mit Parametern n,p.\\
                 $n=1 \quad \ar \Omega(\lb0,1\rb)\quad B_{1,p}=1-p\qquad B_{1,p}(\lb1\rb)=p:$ Zweipunktverteilung\\
                 $n\geq4 \qquad A=\lb0,1,2\rb\quad B_{n,p}(A)=(1-p)^n+np(1-p)^{1\cdot n}+\binom{n}{2}p^2(1-p)^{n-2}$\\
         }
         \item {\underline{Hypergeometrische Verteilung}\\
                 \index{Hypergeometrische Verteilung}
-                Lieferung von N-Geräten. Davon sind $M\leq N$ defekt. Entnahme aus der Lieferung zufällig $n\leq N$ Geräte
+                Lieferung von N-Geräten. Davon sind $M\leq N$ defekt. Entnehme aus der Lieferung zufällig $n\leq N$ Geräte
                 und prüfe sie. Gesucht ist die Wahrscheinlichkeit\\
                 $\p(\text{Genau m der geprüften Geräte sind defekt})$.
-                Insgesamt $\binom{N}{m}$ Möglichkeiten, Geräte zu
+                Insgesamt $\binom{N}{n}$ Möglichkeiten, Geräte zu
                 entnehmen. Damit davon genau m defekt sind, m Geräte aus den
                 M defekten entnehmen, n-m Geräte aus den N-M nicht defekten.
-                $$\binom{N}{m}\binom{N-M}{n-m}\text{ Möglichkeiten}$$
+                $$\binom{M}{m}\binom{N-M}{n-m}\text{ Möglichkeiten}$$
                 Ansatz: 
                 $$\p(\lb m \rb):=\frac{\binom{M}{m}\binom{N-M}{n-m}}{\binom{N}{n}};\quad m=0,\ldots,n$$
                 $\Rightarrow$ Hypergeometrische Verteilung mit Parametern N,M,n.\\
                 z.z.
-                $$\sum^n_{m=0}{\binom{M}{N}\binom{N-M}{n-m}}=\binom{N}{m}\quad \text{Übungsaufgabe!}$$
+                $$\sum^n_{m=0}{\binom{M}{m}\binom{N-M}{n-m}}=\binom{N}{N}\quad \text{Übungsaufgabe!}$$
                 $\ar \p$ ist \WM auf $\Omega(\lb0,\ldots,n\rb)\quad \binom{M}{m}=0 \quad \text{für }m\leq M$\\
         }
         \item {\underline{POISSON-Verteilung:}\\
