- Rest vom Kapitel Erwartungswert eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@162 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/fichtner-ewms/skript.tex
+++ b/fichtner-ewms/skript.tex
@@ -127,7 +127,7 @@ P(A)=0,5, P(\{k\})=\frac{1}{6}, k=1,\ldots,6$
   \Rightarrow P(\bigcup_{k=1}^\infty A_k)=\sum_{k=1}^\infty P(A_k)$
 \end{itemize}
 
-\section{$\sigma$-Algebra}
+\section{$\sigma$-Algebr a}
 
 Im folgenden gilt immer:
 \begin{itemize}
@@ -216,8 +216,8 @@ Punkte (1) und (2) gelten und zusätzlich\\
   \item[zu b)] Nach Eigenschaft (3) kann folgender Schluss gezogen
     werden $A_1,\ldots,A_n\in\CF\Rightarrow A_1^c,\ldots,A_n^c\in\CF
     \Rightarrow \bigcup_{k=1}^n A_k^c\in\CF$. Nach den deMorganschen
-    Regeln bedeutet dies: $\left(\bigcup_{k=1}^n A_k\right)^c
-    \Rightarrow \bigcup_{k=1}^n A_k\in\CF$
+    Regeln bedeutet dies: $\left(\bigcap_{k=1}^n A_k\right)^c
+    \Rightarrow \bigcap_{k=1}^n A_k\in\CF$
   \end{itemize}
 \end{proof}
 
@@ -2933,6 +2933,7 @@ und wir betrachten die Zufallsgrößen $\xi, \eta, \zeta$.
 \end{proof}
 
 \begin{satz}
+  \label{satz:542}
   Sei $P_\xi(\Z)=1$\footnote{diskrete Verteilung, $\xi$ nimmt nur
     ganze Zahlen an.}. Falls $E\xi$ konvergiert, gilt:
   \[E\xi= \sum_{k\in\Z} k P\xi(\{k\}) (=\sum_{k\in\Z} ka_k\]
@@ -2951,6 +2952,78 @@ und wir betrachten die Zufallsgrößen $\xi, \eta, \zeta$.
   Aus Satz~\ref{satz:zgreew-41} folgt, $E\xi=\int x P_\xi(dx)= \int x
   f(x) \ell dx= \int_{-\infty}^\infty xf(x)dx$.
 \end{proof}
+
+\begin{satz}
+  Sei $\xi$ eine nichtnegative Zufallsgröße, d.h. $P("`\xi\geq ="') =1
+  \Leftrightarrow P_\xi([0, +\infty))=1$. Dann gilt:
+  \[E\xi = \int_{[0, +\infty)} (1-f_\xi(x)) \ell dx\]
+\end{satz}
+\begin{proof}
+  ergänzen
+\end{proof}
+
+\begin{definition}
+  Sei $\xi$ eine Zufallsgröße, so dass $E\xi^k$ existiert. Dann heißt
+  $m_k(\xi) = E\xi^k$ $k$-tes \emph{Moment\index{Moment}} der
+  Zufallsgröße $\xi$.
+\end{definition}
+
+\paragraph{Momentenproblem}
+Ist $P_\xi$ durch die Folge $(m_k(\xi))_{k=1}^n$ eindeutig bestimmt?
+Diese Frage ist negativ zu beantworten. Nach dem Übertragungssatz ist
+klar, dass $E\xi^k= \int x^k P_\xi(dx)$ gilt. Aus der Kenntnis von
+$P_\xi$ folgt somit die Kenntnis des Moments. Aber im allgemeinen ist
+$E\xi^k \not\Rightarrow P_\xi$. Eine posistive Antwort auf die obige
+Frage ist nur unter gewissen Beschränktheitsforderungen möglich.
+
+\begin{satz}
+  \begin{enumerate}[(E1)]
+  \item Seien $E\xi_1, E\xi_2$ endlich. Dann folgt: $E(a_1\xi_1 +
+    a_2\xi_2) = a_1E\xi_1 + a_2E\xi_2$ mit $a_1, a_2\in\R$.
+  \item Sei $\xi=\chi_A, A\in\CF\Rightarrow E\xi=P(A)$
+  \item Sei $P("`\xi=c"')=1\Rightarrow E\xi=c$
+  \item Sei $P("`a\leq \xi \leq b"')=1 \Rightarrow a\leq E\xi\leq b$
+  \end{enumerate}
+\end{satz}
+\begin{proof}
+  \begin{enumerate}[(E1)]
+  \item $E(a_1\xi_1+a_2\xi_2) = \int (a_1\xi_1+ a_2\xi_2) dP =
+    a_1\int \xi_1dP+ a_2\int \xi_2dP= a_1E\xi_1+a_2E\xi_2$
+  \item $E\chi_A= \int\chi_A dP=P(A)$
+  \item $P("`\xi=c"')=1\Rightarrow P_\xi=\delta_c$\\
+    Nach Satz~\ref{satz:zgreew-41} folgt nun $E\xi= \int x P_\xi(dx)
+    =\int x \delta_c(dx)$ und letzteres ist ein Integral bei diskreten
+    Maßen. Damit ergibt sich nach Satz~\ref{satz:542}, dass die letzte
+    Aussage gleich $\sum_{k\in\R} 1\cdot\delta_c(\{k\})=c$ ist. Im
+    allgemeinen Fall gilt $\int f(x)\delta_c (dx)= f(x)$. %muss das
+                                %nicht eigentlich f(_c_) sein?
+    Noch allgemeiner formuliert: $\int f(x) \sum_{k}
+    a_k\delta_{\omega_k} (dx)= \sum_k a_k f(\omega_k)$.
+  \item $P("`a\leq \xi\leq b"')=1 \Rightarrow P_\xi([a,b])=1
+    \Rightarrow E\xi=\int x P_\xi(dx)= \int_{[a,b]} xP_\xi(dx) \geq
+    \int_{[a,b]} aP_\xi(dx) = aP([a,b])=a$
+  \end{enumerate}
+\end{proof}
+
+\begin{beispiel}
+  \begin{enumerate}
+  \item Bernoulli-Verteilung: $P_\xi= B_{1,p} = p\delta_1+ (1-p)
+    \delta_0 \Rightarrow E\xi= 1p+0(1-p)=p$
+  \item $P_\xi= B_{n,p} = \sum_{k=0}^n \binom{n}{k} p^k (1-p)^{n-k}
+    \delta_k \Rightarrow E\xi = \sum_{l=0}^n k\binom{n}{k} p^k
+    (1-p)^{n-k} =np$\\
+    Ein anderer Weg, um dies zu ermitteln: Sei $[\Omega, \CF, P] =
+    [\{0,1\}, \FP(\{0,1\}), B_{1,p}]^{n\times}$ und $\xi_k$ die
+    Projektion auf die $k$-te Ebene in $\Omega$. Es ist bekannt, dass
+    $P_{\xi_k} = B_{1,p}$ und $P_{\sum\xi_k}= B_{n,p}=P_\xi$. Damit
+    folgt, $E\xi= E\sum_{k=1}^n \xi_k= \sum_{k=1}^n E\xi_k =
+    \sum_{k=1}^n p= np$.
+  \item Cauchy-Verteilung: $P_\xi=\ell f$ mit $f(x)= \frac{1}{\pi
+      (1+x^2)}$ und $x\in\R$. Es ist klar, dass $\int_0^{+\infty}
+    xf(x) dx=\infty$ gilt.
+  \end{enumerate}
+\end{beispiel}
+
 
 \printindex
 \end{document}
